Updated versions of dependencies and documentation.  Minor changes to unit tests.  Removed polymer copyrights.  Bumped version to 1.0.4

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "modal-icon",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "authors": [
     "Next Century Corporation"
   ],
-  "description": "",
+  "description": "A Polymer Element showing a modular polymer paper-icon-button that can change between the expand icon, the collapse icon, and a given icon.",
   "keywords": [
     "web-component",
     "polymer"
@@ -17,12 +17,12 @@
     "/test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.2.0",
-    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.1"
+    "polymer": "Polymer/polymer#^1.7.0",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "web-component-tester": "^4.0.0"
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
+    "web-component-tester": "^5.0.0"
   }
 }
