--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "modal-icon",
-  "version": "1.0.4",
-  "authors": [
-    "Next Century Corporation"
-  ],
   "description": "A Polymer Element showing a modular polymer paper-icon-button that can change between the expand icon, the collapse icon, and a given icon.",
+  "version": "1.0.4",
+  "authors": ["Next Century Corporation"],
+  "license": "Apache-2.0",
   "keywords": [
     "web-component",
     "polymer"
