--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "modal-icon",
   "description": "A Polymer Element showing a modular polymer paper-icon-button that can change between the expand icon, the collapse icon, and a given icon.",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
   "keywords": [
@@ -9,19 +9,18 @@
     "polymer"
   ],
   "main": "modal-icon.html",
-  "license": "http://polymer.github.io/LICENSE.txt",
   "homepage": "https://github.com/DigElements/modal-icon/",
   "ignore": [
     "/.*",
     "/test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.7.0",
-    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.7"
+    "polymer": "Polymer/polymer#^2.0.2",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
-    "web-component-tester": "^5.0.0"
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "web-component-tester": "^6.0.0"
   }
 }
