--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "modal-icon",
   "description": "A Polymer Element showing a modular polymer paper-icon-button that can change between the expand icon, the collapse icon, and a given icon.",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
   "keywords": [
@@ -17,7 +17,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.2",
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
