--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,17 @@
 {
   "name": "modal-icon",
-  "description": "A Polymer Element showing a modular icon-button that can change between the expand icon, the collapse icon, and a given icon.",
+  "description":
+    "A Polymer Element showing a modular icon-button that can change between the expand icon, the collapse icon, and a given icon.",
   "version": "2.1.0",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
-  "keywords": [
-    "web-component",
-    "polymer"
-  ],
+  "keywords": ["web-component", "polymer"],
   "main": "modal-icon.html",
-  "homepage": "https://github.com/DigElements/modal-icon/",
-  "ignore": [
-    "/.*",
-    "/test/"
-  ],
+  "homepage": "https://github.com/usc-isi-digelements/modal-icon/",
+  "ignore": ["/.*", "/test/"],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.2",
-    "icon-button": "DigElements/icon-button#2.0.1"
+    "icon-button": "https://github.com/KimQ0126/icon-button.git#2.0.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
