--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "modal-icon",
   "description":
     "A Polymer Element showing a modular icon-button that can change between the expand icon, the collapse icon, and a given icon.",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
   "keywords": ["web-component", "polymer"],
@@ -11,7 +11,7 @@
   "ignore": ["/.*", "/test/"],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.2",
-    "icon-button": "https://github.com/KimQ0126/icon-button.git#2.0.2"
+    "icon-button": "usc-isi-digelements/icon-button#^2.0.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
